correctif anthony